<resources>
    <string name="app_name">Health Track AI</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="sleep_hours">Sleep Hours</string>
    <string name="activity_level">Activity Level</string>
    <string name="submit">Submit</string>
    <string name="proceed_to_login">Proceed to Login</string>
    <string name="your_path_to_health_and_happiness">Your Path to Health and Happiness</string>
    <string name="logo">logo</string>
    <string name="animation">animation</string>
    <string name="enter_your_password_a_reset_link_will_be_sent_to_your_email">Enter your password, a reset link will be sent to your email</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset password</string>
    <string name="more">More</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="email_address_">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_reset_password">Forgot password? Reset password.</string>
    <string name="register_here">Register here</string>
    <string name="profile">Profile</string>
    <string name="enter_username">Enter Username</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="save">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="summary_activity">Summary Activity</string>
    <string name="logout">Logout</string>
    <string name="track_health_metrics">Track Health Metrics</string>
    <string name="heart_rate_bpm">Heart Rate (bpm)</string>
    <string name="blood_pressure_mmhg">Blood Pressure (mmHg)</string>
    <string name="blood_sugar_levels_mg_dl">Blood Sugar Levels (mg/dL)</string>
    <string name="body_temperature_c">Body Temperature (°C)</string>
    <string name="body_mass_index_bmi">Body Mass Index (BMI)</string>
    <string name="hydration_levels">Hydration Levels (%)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="track">Track</string>
    <string name="activity_level_low_medium_high">Activity Level (Low/Medium/High)</string>
</resources>